--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -4,11 +4,10 @@
 
 .sidenav {
   width: 200px;
+  border: 0px;
+  box-shadow: 3px 0 6px rgba(0,0,0,0.24);
 }
 
-.sidenav .mat-toolbar {
-  background: inherit;
-}
 
 .mat-toolbar.mat-primary {
   position: sticky;
@@ -17,21 +16,18 @@
 }
 
 .example-fill-remaining-space {
-  /* This fills the remaining space, by using flexbox. 
-     Every toolbar row uses a flexbox row layout. */
   flex: 1 1 auto;
 }
-/*
-a {
+
+mat-toolbar a {
   text-decoration: none;
   color: white;
 }
 
-a:hover,
-a:active {
+mat-toolbar a:hover, mat-toolbar a:active {
   color: lightgray;
 }
-*/
+
 
 .icon {
   display: inline-block;
@@ -47,5 +43,6 @@ a:active {
   display: inline-block;
   line-height: 30px;
   margin: 0;
+  padding-right: 25px;
   width: 85%;
 }
