--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -3,11 +3,11 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-toolbar color="primary"><a routerLink="/">Galacay</a></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/users">Users</a>
+      <a mat-list-item routerLink="/users">Users</a>
+      <a mat-list-item routerLink="/users">Users</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
