--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -3,12 +3,18 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar color="primary"><a routerLink="/">Galacay</a></mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="/users">Users</a>
-      <a mat-list-item routerLink="/users">Users</a>
-      <a mat-list-item routerLink="/users">Users</a>
+    <mat-toolbar color="primary" *ngIf="isHandset$ | async"><a routerLink="/" (click)="drawer.toggle()">Galacay</a></mat-toolbar>
+    <mat-toolbar color="primary" *ngIf="(isHandset$ | async) === false"><a routerLink="/">Galacay</a></mat-toolbar>
+    <mat-nav-list *ngIf="isHandset$ | async">
+      <a mat-list-item routerLink="/users" (click)="drawer.toggle()">Users</a>
+      <a mat-list-item routerLink="/users" (click)="drawer.toggle()">Users</a>
+      <a mat-list-item routerLink="/users" (click)="drawer.toggle()">Users</a>
     </mat-nav-list>
+    <mat-nav-list *ngIf="(isHandset$ | async) === false">
+        <a mat-list-item routerLink="/users">Users</a>
+        <a mat-list-item routerLink="/users">Users</a>
+        <a mat-list-item routerLink="/users">Users</a>
+      </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
@@ -43,7 +49,7 @@
          </a>
       </mat-toolbar>
     </mat-toolbar>
-   <ng-content></ng-content>
+   <router-outlet></router-outlet>
   </mat-sidenav-content>
 
 </mat-sidenav-container>
