--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -49,7 +49,11 @@
          </a>
       </mat-toolbar>
     </mat-toolbar>
-   <router-outlet></router-outlet>
+
+    <mat-card>
+      <router-outlet></router-outlet>
+      </mat-card>
+      
   </mat-sidenav-content>
 
 </mat-sidenav-container>
