--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -26,7 +26,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Posts</span>
+      <mat-toolbar color="primary" *ngIf="isHandset$ | async"><a routerLink="/" (click)="drawer.toggle()">Galacay</a></mat-toolbar>
       <mat-toolbar color="primary">
       
         <!-- This fills the remaining space of the current row -->
