--- a/src/app/modules/user/pages/index/user.component.html
+++ b/src/app/modules/user/pages/index/user.component.html
@@ -18,6 +18,18 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let row">{{row.name}}</td>
       </ng-container>
+
+      <!-- SurName Column -->
+      <ng-container matColumnDef="surname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+        <td mat-cell *matCellDef="let row">{{row.surname}}</td>
+      </ng-container>
+
+      <!-- Birthdate Column -->
+      <ng-container matColumnDef="birthdate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Birthdate</th>
+        <td mat-cell *matCellDef="let row">{{row.birthdate}}</td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
