--- a/src/app/modules/user/pages/index/user.component.html
+++ b/src/app/modules/user/pages/index/user.component.html
@@ -39,7 +39,8 @@
         [length]="dataSource.page.total"
         [pageIndex]="dataSource.page.page - 1"
         [pageSize]="dataSource.page.count"
-        [pageSizeOptions]="[1, 2, 3]">
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons>
     </mat-paginator>
   </div>
   </mat-card-content>
