--- a/src/app/modules/user/pages/index/user.component.html
+++ b/src/app/modules/user/pages/index/user.component.html
@@ -1,11 +1,14 @@
 
 <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>Users</mat-card-title>
     <mat-card-subtitle>system users</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
+      <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" autofocus>
+        </mat-form-field>
 <div class="mat-elevation-z8">
+    
     <table mat-table class="full-width-table" matSort aria-label="Elements">
       <!-- Id Column -->
       <ng-container matColumnDef="id">
@@ -30,7 +33,21 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Birthdate</th>
         <td mat-cell *matCellDef="let row">{{row.birthdate}}</td>
       </ng-container>
-  
+
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef>Edit</th>
+        <td mat-cell *matCellDef="let row">
+          <a (click)="onEditClick(row)"><mat-icon>edit</mat-icon></a>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>Delete</th>
+        <td mat-cell *matCellDef="let row">
+          <a (click)="onDeleteClick(row)"><mat-icon>delete</mat-icon></a>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
